--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ notify = "6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rusqlite = { version = "0.30", features = ["bundled"] }
+lru = "0.12.3"
 brotli = "3.4"
 winreg = "0.52"
 base64 = "0.22"
