--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,8 @@ winreg = "0.52"
 base64 = "0.22"
 flate2 = { version = "1.0", features = ["zlib"] }
 window-vibrancy = "0.5"
+image = "0.25"
+chrono = "0.4"
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
