--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,8 @@ flate2 = { version = "1.0", features = ["zlib"] }
 window-vibrancy = "0.5"
 image = "0.25"
 chrono = "0.4"
+single-instance = "0.3"
+winapi = { version = "0.3", features = ["winuser"] }
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
