--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,5 +37,8 @@ winapi = { version = "0.3", features = ["winuser"] }
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
 
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
+
     
 
