--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,13 @@ chrono = "0.4"
 single-instance = "0.3"
 winapi = { version = "0.3", features = ["winuser"] }
 windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
+zip = "6.0.0"
+encoding_rs = "0.8.35"
+reqwest = { version = "0.12.24", features = ["blocking", "cookies", "json"] }
+scraper = "0.24.0"
+regex = "1.12.2"
+tokio = { version = "1.48.0", features = ["full"] }
+cookie_store = "0.22.0"
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
