--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     },
     "dependencies": {
         "@tauri-apps/api": "^2.0.0",
+        "@tauri-apps/plugin-deep-link": "^2.4.5",
         "@tauri-apps/plugin-dialog": "^2.0.0",
         "@tauri-apps/plugin-process": "^2.3.1",
         "@tauri-apps/plugin-shell": "^2.3.3",
         "@tauri-apps/plugin-updater": "^2.9.0",
         "@types/react-window": "^1.8.8",
+        "firebase": "^12.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-window": "^2.2.2"
