--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "2.0", features = [] }
 tauri = { version = "2.0", features = ["tray-icon"] }
 tauri-plugin-shell = "2.0"
 tauri-plugin-dialog = "2.0"
+tauri-plugin-deep-link = "2.0.0"
 # system tray for v2 (tauri has built-in tray in core v2)
 notify = "6"
 serde = { version = "1.0", features = ["derive"] }
@@ -39,6 +40,7 @@ scraper = "0.24.0"
 regex = "1.12.2"
 tokio = { version = "1.48.0", features = ["full"] }
 cookie_store = "0.22.0"
+tauri-plugin-single-instance = "2.3.6"
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
