--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hypercool"
-version = "0.3.9"
+version = "0.4.0"
 description = "쿨 메신저 메시지 관리 프로그램"
 authors = ["moominda"]
 license = ""
@@ -41,6 +41,7 @@ regex = "1.12.2"
 tokio = { version = "1.48.0", features = ["full"] }
 cookie_store = "0.22.0"
 tauri-plugin-single-instance = "2.3.6"
+uuid = { version = "1.0", features = ["v4", "serde"] }
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
