--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "hypercool",
     "private": true,
-    "version": "0.4.0",
+    "version": "0.4.3",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build && npm run copy-html",
         "copy-html": "node -e \"const fs = require('fs'); fs.copyFileSync('message-viewer.html', 'dist/message-viewer.html');\"",
         "preview": "vite preview",
-        "tauri": "tauri"
+        "tauri": "tauri",
+        "test": "vitest"
     },
     "dependencies": {
         "@tauri-apps/api": "^2.0.0",
@@ -25,10 +26,14 @@
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2.0.0",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.1",
+        "jsdom": "^27.2.0",
         "typescript": "^5.2.2",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "vitest": "^4.0.15"
     }
 }
