Update latest.json for version 0.4.6

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hypercool"
-version = "0.4.3"
+version = "0.4.5"
 description = "쿨 메신저 메시지 관리 프로그램"
 authors = ["moominda"]
 license = ""
@@ -32,7 +32,7 @@ image = "0.25"
 chrono = "0.4"
 single-instance = "0.3"
 winapi = { version = "0.3", features = ["winuser"] }
-windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
+windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }
 zip = "6.0.0"
 encoding_rs = "0.8.35"
 reqwest = { version = "0.12.24", features = ["blocking", "cookies", "json"] }
