--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hypercool",
     "private": true,
-    "version": "0.4.5",
+    "version": "0.4.8",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -12,6 +12,7 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@tanstack/react-virtual": "^3.13.13",
         "@tauri-apps/api": "^2.0.0",
         "@tauri-apps/plugin-deep-link": "^2.4.5",
         "@tauri-apps/plugin-dialog": "^2.0.0",
